# qni-core-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs
src/: c_api.rs  connector.rs  console.rs  hub.rs  lib.rs  test.rs
src/protos/: mod.rs  qni_api.rs
tests/: api_test.rs
