[package]
name = "qni-core-rs"
description = "qni core library"
version = "0.3.2"
keywords = ["qni", "core"]
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
repository = "https://github.com/Riey/qni-core-rs"
homepage = "https://github.com/Riey/qni-core-rs"
documentation = "https://docs.rs/qni-core-rs"
license = "LGPL-3.0"
readme = "README.md"

exclude = [
    "build.rs",
    ".gitignore",
    ".gitmodules",
    ".travis.yml",
    ".vscode/**/*",
    ".idea/**/*",
]

[build-dependencies]
protoc-rust = "2.8"

[dependencies]
protobuf = "2.8"
chrono = "0.4.6"
atomic-option = "0.1.2"
failure = "0.1.3"
futures = "0.1.25"
