[package]
name = "qni-core-rs"
description = "qni core library"
version = "0.4.0"
keywords = ["qni", "core"]
authors = ["Riey <creeper844@gmail.com>"]
edition = "2021"
repository = "https://github.com/Riey/qni-core-rs"
homepage = "https://github.com/Riey/qni-core-rs"
documentation = "https://docs.rs/qni-core-rs"
license = "LGPL-3.0"
readme = "README.md"

exclude = [
    "build.rs",
    ".gitignore",
    ".gitmodules",
    ".travis.yml",
    ".vscode/**/*",
    ".idea/**/*",
]

[build-dependencies]
protoc-rust = "2.25.2"

[dependencies]
protobuf = "2.25.2"
atomic-option = "0.1.2"
thiserror = "1.0.30"
chrono = "0.4.19"

[features]
